# ocr-doctr-fastapi-test

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml
notebook/: llm.py  ocr.py
