[project]
name = "test"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Kone Tenon", email = "tenon3640@gmail.com"}
]
requires-python = ">=3.12,<4.0"

dependencies = [
    "python-doctr[torch]>=0.10.0",
    "pymupdf (>=1.27.2.2,<2.0.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "mplcursors (>=0.7.1,<0.8.0)",
    "groq (>=1.1.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "python-multipart (>=0.0.24,<0.0.25)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"