[tool.poetry]
name = "test"
version = "0.1.0"
description = "OCR PoC"
authors = ["Kone Tenon <tenon3640@gmail.com>"]
package-mode = false  # <-- INDISPENSABLE pour Poetry 2.0

[tool.poetry.dependencies]
python = "^3.10"
python-doctr = {extras = ["torch"], version = "^0.10.0"}
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.9"
groq = "^0.5.0"
python-dotenv = "^1.0.0"
pymupdf = "^1.23.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"